<resources>
    <string name="app_name">Fitnessapp</string>
    <string name="startup_heading">Hoşgeldin</string>
    <string name="startup_headline">Sağlıklı bir adım için harika bir başlangıç</string>
    <string name="login">Giriş</string>
    <string name="signup">Yeni Hesap</string>
    <string name="enter_username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="remember_me">Beni Hatırla</string>
    <string name="forget_password">Şifremi Unuttum</string>
    <string name="create_sign_up">Yeni Hesap Oluştur</string>
    <string name="create_account">Hesap Oluştur</string>
    <string name="create_accountwithn">Hesap\nOluşturun</string>
    <string name="enter_name">İsminiz</string>
    <string name="email">Email</string>
    <string name="enter_phone">Telefon Numarası</string>
    <string name="enter_password">Şifreniz</string>
    <string name="next_btn">Sıradaki</string>
    <string name="male">Erkek</string>
    <string name="female">Kadın</string>
    <string name="other">Diğer</string>
    <string name="select_age">Yaşınızı Girin</string>
    <string name="choose_gender">Cinsiyet Seçin</string>
    <string name="enter_weight">Kilonuz</string>
    <string name="enter_height">Boyunuz</string>
    <string name="otp_code_text">Onay\nKodu</string>
    <string name="otp_verification_code">Doğrulama</string>
    <string name="forget_password_text">Şifre\nYenileme</string>
    <string name="forgot_password_detail">Provide your account\'s email for which you want to reset your password</string>
    <string name="make_selection_detail">Select which contact detail should we use to reset your password?</string>
    <string name="make_selection">Seçim Yapın</string>
    <string name="via_sms">sms:</string>
    <string name="via_mail">mail:</string>
    <string name="new_credantials">New Credantials</string>
    <string name="new_credentails_detail">Your identity has been verified set your new password</string>
    <string name="ok_button">Tamam</string>
    <string name="password_updated">Şifre\nYenilendi</string>
    <string name="password_updated_text">Your password has been updated!</string>
    <string name="diseases">Sağlık Sorunu</string>
    <string name="Home">Anasayfa</string>
    <string name="activities">Aktiviteler</string>
    <string name="cal">Kalori</string>
    <string name="faq">SSS</string>
    <string name="user">User</string>
</resources>