<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_up2nd_Class"
    android:background="@color/yellow"
    android:padding="30dp">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <ImageView
        android:id="@+id/signup_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:onClick="callBackScreen"
        android:transitionName="transition_back_arrow_btn"/>

    <TextView
        android:id="@+id/signup_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli_semibold_italic"
        android:text="@string/create_accountwithn"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:transitionName="transition_title_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/choose_gender"
          android:textColor="@color/black"
          android:textSize="18sp"/>

      <RadioGroup
          android:id="@+id/radio_group"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:orientation="horizontal"
          android:layout_gravity="center">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other" />
      </RadioGroup>

      <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        android:text="@string/select_age"
        android:textColor="@color/black"
        android:textSize="18sp"/>

      <DatePicker
          android:id="@+id/age_picker"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:spinnersShown="true"/>


    </LinearLayout>


    <Button
        android:id="@+id/signup_next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_btn"
        android:background="@color/black"
        android:onClick="call3rdSignupScreen"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:elevation="5dp"
        android:transitionName="transition_next_btn"/>

    <Button
        android:id="@+id/signup_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="#00000000"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/muli_light"
        android:elevation="5dp"
        android:onClick="callLoginScreen"
        android:transitionName="transition_login_btn"/>



  </LinearLayout>

</ScrollView>