<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Startup">

    <VideoView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/videoview"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_semibold_italic"
            android:text="@string/startup_heading"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:layout_marginTop="500dp"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_light"
            android:text="@string/startup_headline"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="callLoginScreen"
                android:background="@color/black"
                android:text="@string/login"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle"
                android:transitionName="transition_login"/>


            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:onClick="callSignScreen"
                android:background="@color/black"
                android:text="@string/signup"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle"
                android:transitionName="transition_sign"/>


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>