<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordSuccessMessage"
    android:background="@color/white"
    android:padding="30dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:padding="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:fontFamily="@font/muli_bold"
            android:layout_marginTop="-80dp"
            android:textAlignment="center"
            android:gravity="center"
            android:textAllCaps="true"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/update"
            android:layout_margin="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/muli_light"
            android:textAlignment="center"
            android:gravity="center"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>


    </LinearLayout>


</LinearLayout>