<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/yellow"
    android:padding="30dp"
    android:transitionName="transition_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/backarrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:onClick="callBackScreen"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/muli_semibold_italic"
            android:textColor="@color/black"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textSize="40sp"/>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="40dp">
             
             <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/enter_username"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:startIconDrawable="@drawable/ic_baseline_person_24"
                    app:startIconTint="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/muli_light"
                        android:textColor="@color/black"

                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:hint="@string/password"
                 app:hintTextColor="@color/black"
                 app:boxStrokeColor="@color/black"
                 app:boxStrokeWidthFocused="2dp"
                 app:startIconDrawable="@drawable/ic_baseline_security_24"
                 app:startIconTint="@color/black"
                 app:endIconMode="password_toggle"
                 app:endIconTint="@color/black">

                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/muli_light"
                     android:textColor="@color/black"
                     android:inputType="textPassword"/>

             </com.google.android.material.textfield.TextInputLayout>

             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp">

                 <CheckBox
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                     android:text="@string/remember_me"
                     android:buttonTint="@color/black"
                     android:layout_centerVertical="true"
                     android:textColor="@color/black"/>

                 <Button
                     android:id="@+id/forgetPassword"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:text="@string/forget_password"
                     android:onClick="callForgetPassword"
                     android:textColor="@color/black"
                     android:backgroundTint="@color/yellow"
                     android:transitionName="transition_forget"/>
             </RelativeLayout>

             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/login"
                 android:background="@color/black"
                 android:textColor="@color/white"
                 android:layout_marginTop="20dp"/>

             <Button
                 android:id="@+id/new_user"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/create_sign_up"
                 android:layout_marginTop="20dp"
                 android:background="#00000000"
                 android:layout_gravity="center"
                 android:onClick="callSignScreen"/>


         </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>