<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_up3th_Class"
    android:background="@color/yellow"
    android:padding="30dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:onClick="callBackScreen"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:transitionName="transition_back_arrow_btn"/>

        <TextView
            android:id="@+id/signup_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_semibold_italic"
            android:text="@string/create_accountwithn"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:transitionName="transition_title_text"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_weight"
                app:startIconDrawable="@drawable/scale"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_height"
                app:startIconDrawable="@drawable/height"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                android:layout_marginTop="18dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/selectCard"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="25dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="#00000000">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/diseases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/diseases"
                        android:textSize="16sp"
                        android:layout_marginTop="18dp"
                        android:layout_marginLeft="50dp"
                        android:textColorHint="@color/black" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:src="@drawable/health"
                        android:layout_marginTop="10dp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/dropdown"
                        android:layout_centerInParent="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="10dp"/>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>



        </LinearLayout>


        <Button
            android:id="@+id/signup_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:background="@color/black"
            android:onClick="callNextSignupScreen"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:transitionName="transition_next_btn" />

        <Button
            android:id="@+id/signup_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="#00000000"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muli_light"
            android:elevation="5dp"
            android:onClick="callLoginScreen"
            android:transitionName="transition_login_btn"/>



    </LinearLayout>



</ScrollView>